--- a/src/components/css/Product_detail.css
+++ b/src/components/css/Product_detail.css
@@ -210,7 +210,7 @@
 }
 
 .product-description {
-  background: #fafafa;
+  background: #ffffff;
   padding: 18px 18px 12px 18px;
   border-radius: 0;
   margin-top: 18px;
